fixed layout issues

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
 
 }
 
+#main-heading{
+    position:relative
+    
+}
 
 #main-img{
     
@@ -19,6 +23,7 @@
     border-radius: 2000px;
     border: 1px solid black;
     margin-top: 40%;
+    position: absolute;
 
     
 
